[package]
name = "solana-crowdfunding"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = { version = "1.0.0", features = ["derive"] }
solana-program = "~1.18"

[dev-dependencies]
solana-program-test = "~1.18"
solana-sdk = "~1.18"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
